@@ -1,3 +1,7 @@
+<b>2012-12-28</b>
+
+* Bugfix: Add some margin above/below the Analyze charts to accommodate mouseover highlight.
+
 <b>2011-11-20</b>
 
 * Update OpenLayers to 2.11.  Fixes Android compatibility.
